fix: correct footer align to header

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -179,16 +179,16 @@ body {
 
 .footer {
 	width: 100%;
-	margin: auto;
 	background-color: #2e2e2e;
+	display: flex;
+	justify-content: space-evenly;
+	padding: 4px 16px;
 	&__container {
+		width: 100%;
+		margin: 0;
 		max-width: 1245px;
 		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-		justify-content: space-between;
-		padding-top: 10px;
-		padding-bottom: 10px;
-		
+		grid-template-columns: 1fr 1fr 1fr;	
 		&-center {
 			white-space: nowrap;
 			&-text {
@@ -198,15 +198,15 @@ body {
 			}
 		}
 		&-right {
-			@media (max-width: $mobile) {
-				margin: auto;
-			}
-			padding: 0 16px;
+			padding: 0 20px;
 			display: flex;
 			align-items: center;
 			font-size: 2rem;
 			& a {
 				color: #4080ff;
+				&:hover{
+					color: whitesmoke;
+				}
 			}
 		}
 	}
